# kids-desktop-agent

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
app/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
app/e2e/: global-setup.ts  ui.spec.ts
app/electron/: main.cjs  ollamaInstall.cjs  overlayPolicy.cjs  preload.cjs
app/src/: App.tsx  AvatarFace.tsx  ComputerUseBanner.tsx  KidMenu.tsx  OnboardingWizard.tsx  ParentPanel.tsx  ParentSetupWizard.tsx  WhoIsPlaying.tsx  agentSocket.ts  backendSpeak.ts  curiosity.ts  main.tsx  speak.ts  styles.css  usePushToTalk.ts  (+1 more)
backend/: README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements.txt
backend/kids_agent/: __init__.py  __main__.py  avatars.py  budget.py  computer_use.py  config.py  content_filter.py  fakes.py  games.py  hardware.py  identity.py  model_catalog.py  prompts.py  safety.py  server.py  speech.py  tts.py  usage.py  vision.py
backend/kids_agent/engines/: __init__.py  agent_loop.py  base.py  cascade_cloud.py  hybrid_policy.py  local_ollama.py  router.py
backend/kids_agent/os_adapter/: __init__.py  base.py  macos.py  windows.py
backend/kids_agent/skills/: __init__.py  registry.py
backend/tests/: __init__.py  conftest.py  test_allowlist.py  test_hybrid_router.py
backend/tests/e2e/: __init__.py  helpers.py  test_ws_flows.py
config/: config.example.json
docs/: INSTALLER_OPTIONAL_COMPONENTS.md  installer-components.json
(+2 files in other folders)
