[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kids-agent"
version = "0.1.0"
description = "Kids Desktop Agent backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "websockets>=14.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.0",
  "numpy>=2.0.0",
  "sounddevice>=0.5.1",
]

[project.scripts]
kids-agent = "kids_agent.server:main"

[tool.setuptools.packages.find]
include = ["kids_agent*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
